lang/tests/ui/fail/01-constructor-returns.stderr
error: constructors in ink! must have no specified return type
  --> $DIR/01-constructor-returns.rs:16:27
   |
16 |         fn new(&mut self) -> Self {}
   |                           ^^^^^^^
